--- a/about.twig
+++ b/about.twig
@@ -11,16 +11,7 @@
         
         <img src="#logo">
         <a href="home.twig"> Home </a>
-        <a href="news.twig">News</a>
-        <a href="reviews.twig"> Reviews </a>
-        <a href="interview.twig"> Interview </a>
-        <a href="about.twig"> About </a>
-       
-        <div class="social">
-<a href="http://www.facebook.de"><img src="../web/images/facebook.svg" class="socilogo"></a>
-<a href="http://www.twitter.de" ><img src="../web/images/twitter.svg" class="socilogo"></a>
-<a href="http://www.youtube.de"><img src="../web/images/youtube.svg" class="socilogo"></a>
-            
+        <a href="news.
         </div>
     </nav>
 
